# teasneeze

./: .hgignore  README.md  stack.yaml  tea-sneeze.cabal
shaders/: basic_model_view_projection.vs  billboard.vs  flat_green.fs  texture.fs
src/: Camera.hs  DataPoints.hs  LoadData.hs  Main.hs  Opts.hs  Spherical.hs  State.hs  TSNE.hs  Util.hs
test/digits/: collect_data.py  digits.json  digits_tsne.json  generate_images.py  run_tsne.py
