name:                tea-sneeze
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/tea-sneeze#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable tea-sneeze
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Opts
                       Camera
                       DataPoints
                       LoadData
                       Spherical
                       State
                       Util
                       TSNE

  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       mtl,
                       OpenGL-Util,
                       OpenGL,
                       GLUT,
                       random,
                       filepath,
                       bytestring,
                       aeson,
                       optparse-applicative,
                       tsne,
                       normaldistribution,
                       data-default
                       
